# rzgate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-HEADER.txt  Makefile  README.md  auth.yml  build.sh  discovery.yml  gen_certs.sh  openapi.yaml  rzgate.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
bench/: factory_bench.rs
src/: auth.rs  bitmask.rs  config.rs  error.rs  helper.rs  lib.rs  main.rs  metrics.rs  server.rs
src/handler/: cluster_handler.rs  connection.rs  demux.rs  discovery.rs  handler.rs  mod.rs  no_cluster_handler.rs  protocol.rs
src/processor/: base.rs  dec_room_avl.rs  del_prop.rs  del_prop_day.rs  del_prop_room.rs  del_room_day.rs  del_segment.rs  get_codecs.rs  get_prop_room_day.rs  get_segments.rs  inc_room_avl.rs  mod.rs  prop_exist.rs  prop_room_date_list.rs  prop_room_exist.rs  prop_room_list.rs  search_avail.rs  search_prop.rs  set_prop.rs  set_room_avl.rs  set_room_pkg.rs
