# // SPDX-License-Identifier: BUSL-1.1
# // Copyright (c) 2026 M. Javani
# //
# // This file is part of rzgate.
# //
# // Use of this software is governed by the Business Source License 1.1
# // included in the LICENSE file in the root of this repository.

[package]
name = "rzgate"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.8.0"
axum = { version = "0.8.8", features = ["tokio", "http2"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.148"
serde_yaml = "0.9.34"
slab = "0.4.11"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tokio-util = "0.7.18"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = true, features = ["env-filter", "json", "time"] }

uuid = "1.19.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
rustc-hash = "2.1.1"
itoa = "1.0.17"
num_cpus = "1.17.0"

